Test optional remote indices