@@ -103,40 +103,45 @@ public class RestGetUserPrivilegesActionTests extends ESTestCase {
                 )
             )
         );
-        final Set<GetUserPrivilegesResponse.RemoteIndices> remoteIndex = new LinkedHashSet<>(
-            Arrays.asList(
-                new GetUserPrivilegesResponse.RemoteIndices(
-                    new GetUserPrivilegesResponse.Indices(
-                        Arrays.asList("remote-index-1", "remote-index-2", "remote-index-3-*"),
-                        List.of("read"),
-                        new LinkedHashSet<>(
-                            Arrays.asList(
-                                new FieldPermissionsDefinition.FieldGrantExcludeGroup(new String[] { "public.*" }, new String[0]),
-                                new FieldPermissionsDefinition.FieldGrantExcludeGroup(new String[] { "*" }, new String[] { "private.*" })
-                            )
+        final Set<GetUserPrivilegesResponse.RemoteIndices> remoteIndex = randomBoolean()
+            ? Set.of()
+            : new LinkedHashSet<>(
+                Arrays.asList(
+                    new GetUserPrivilegesResponse.RemoteIndices(
+                        new GetUserPrivilegesResponse.Indices(
+                            Arrays.asList("remote-index-1", "remote-index-2", "remote-index-3-*"),
+                            List.of("read"),
+                            new LinkedHashSet<>(
+                                Arrays.asList(
+                                    new FieldPermissionsDefinition.FieldGrantExcludeGroup(new String[] { "public.*" }, new String[0]),
+                                    new FieldPermissionsDefinition.FieldGrantExcludeGroup(
+                                        new String[] { "*" },
+                                        new String[] { "private.*" }
+                                    )
+                                )
+                            ),
+                            new LinkedHashSet<>(
+                                List.of(
+                                    new BytesArray("{ \"term\": { \"access\": \"public\" } }"),
+                                    new BytesArray("{ \"term\": { \"access\": \"standard\" } }")
+                                )
+                            ),
+                            false
                         ),
-                        new LinkedHashSet<>(
-                            List.of(
-                                new BytesArray("{ \"term\": { \"access\": \"public\" } }"),
-                                new BytesArray("{ \"term\": { \"access\": \"standard\" } }")
-                            )
+                        new LinkedHashSet<>(List.of("remote-*"))
+                    ),
+                    new GetUserPrivilegesResponse.RemoteIndices(
+                        new GetUserPrivilegesResponse.Indices(
+                            List.of("remote-index-4"),
+                            Collections.singleton("all"),
+                            Collections.emptySet(),
+                            Collections.emptySet(),
+                            true
                         ),
-                        false
-                    ),
-                    new LinkedHashSet<>(List.of("remote-*"))
-                ),
-                new GetUserPrivilegesResponse.RemoteIndices(
-                    new GetUserPrivilegesResponse.Indices(
-                        List.of("remote-index-4"),
-                        Collections.singleton("all"),
-                        Collections.emptySet(),
-                        Collections.emptySet(),
-                        true
-                    ),
-                    new LinkedHashSet<>(Arrays.asList("*", "remote-2"))
+                        new LinkedHashSet<>(Arrays.asList("*", "remote-2"))
+                    )
                 )
-            )
-        );
+            );
         final Set<ApplicationResourcePrivileges> application = Sets.newHashSet(
             ApplicationResourcePrivileges.builder().application("app01").privileges("read", "write").resources("*").build(),
             ApplicationResourcePrivileges.builder().application("app01").privileges("admin").resources("department/1").build(),
@@ -155,6 +160,31 @@ public class RestGetUserPrivilegesActionTests extends ESTestCase {
         listener.buildResponse(response, builder);
 
         String json = Strings.toString(builder);
+        String remoteIndicesSection = remoteIndex.isEmpty() ? "" : """
+            , "remote_indices": [
+                {
+                  "names": [ "remote-index-1", "remote-index-2", "remote-index-3-*" ],
+                  "privileges": [ "read" ],
+                  "field_security": [
+                    {
+                      "grant": [ "*" ],
+                      "except": [ "private.*" ]
+                    },
+                    {
+                      "grant": [ "public.*" ]
+                    }
+                  ],
+                  "query": [ "{ \\"term\\": { \\"access\\": \\"public\\" } }", "{ \\"term\\": { \\"access\\": \\"standard\\" } }" ],
+                  "allow_restricted_indices": false,
+                  "clusters": [ "remote-*" ]
+                },
+                {
+                  "names": [ "remote-index-4" ],
+                  "privileges": [ "all" ],
+                  "allow_restricted_indices": true,
+                  "clusters": [ "*", "remote-2" ]
+                }
+              ]""";
         assertThat(json, equalTo(XContentHelper.stripWhitespace("""
             {
               "cluster": [ "monitor", "manage_ml", "manage_watcher" ],
@@ -213,31 +243,7 @@ public class RestGetUserPrivilegesActionTests extends ESTestCase {
                   "resources": [ "tenant/42", "tenant/99" ]
                 }
               ],
-              "run_as": [ "app-user-*", "backup-user" ],
-              "remote_indices": [
-                {
-                  "names": [ "remote-index-1", "remote-index-2", "remote-index-3-*" ],
-                  "privileges": [ "read" ],
-                  "field_security": [
-                    {
-                      "grant": [ "*" ],
-                      "except": [ "private.*" ]
-                    },
-                    {
-                      "grant": [ "public.*" ]
-                    }
-                  ],
-                  "query": [ "{ \\"term\\": { \\"access\\": \\"public\\" } }", "{ \\"term\\": { \\"access\\": \\"standard\\" } }" ],
-                  "allow_restricted_indices": false,
-                  "clusters": [ "remote-*" ]
-                },
-                {
-                  "names": [ "remote-index-4" ],
-                  "privileges": [ "all" ],
-                  "allow_restricted_indices": true,
-                  "clusters": [ "*", "remote-2" ]
-                }
-              ]
-            }""")));
+              "run_as": [ "app-user-*", "backup-user" ]%s
+            }""".formatted(remoteIndicesSection))));
     }
 }
